Refactor order services and optimize code sharing/utils
Replaced duplicate logic in cancellation and refund services with a shared OrderItemHelper component for resolving order items. Simplified stock restoration functionality by moving it to OrderStockService. Added new utility methods, refined status checks, and removed redundant imports to improve maintainability and clarity across order-related services.